# daumenkino

./: README.md
playground/: README.md
playground/daumenkino/: LICENSE  README.md  setup.cfg  tox.ini
playground/daumenkino/src/daumenkino/: _widget.py  napari.yaml
playground/daumenkino/src/daumenkino/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
